--- a/contacto.html
+++ b/contacto.html
@@ -72,7 +72,7 @@
      
   <div class="text-center p-3" style="background-color: rgb(8, 179, 136);">
    
-    <a class="text-dark" href="https://coderhouse.com/">PRE-ENTREGA NUMERO 3 CODERHOUSE</a>
+    <a class="text-dark" href="https://coderhouse.com/">ENTREGA FINAL CODERHOUSE</a>
   </div>
 </footer>
 </body>
